fix: css fixes horizontal scroll

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -81,11 +81,13 @@
   will-change: transform;
 }
 
-.hide-scrollbar::-webkit-scrollbar {
-  display: none;
+
+.scrollbar-hide {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
 }
 
-.hide-scrollbar {
-  -ms-overflow-style: none; /* Internet Explorer 10+ */
-  scrollbar-width: none; /* Firefox */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;  /* Chrome, Safari, Opera*/
 }
+
